--- a/style.css
+++ b/style.css
@@ -1,4 +1,112 @@
+:root {
+  --shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
+      0 1px 2px rgba(0, 0, 0, 0.24);
+  --transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  --anime: 0 14px 28px rgba(0, 0, 0, 0.25),
+      0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+@font-face {
+  font-family: "Google";
+  src: url(font/ProductSans-Bold.woff);
+}
 body {
   margin: 0;
   padding: 0;
+  background: #e2e1e0;
+  font-family: "Google", "sans-serif";
+  text-align: center;
+}
+
+.container {
+  background: #fff;
+  border-radius: 10px;
+  width: calc(100vw - 30px);
+  min-height: calc(100vh - 30px);
+  box-shadow: var(--shadow);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  margin: 15px;
+}
+
+#DSC-SJCET {
+  width: 50vw;
+  height: auto;
+}
+
+#SMALL-DSC-SJCET {
+  display: none;
+  width: 40vw;
+  height: auto;
+}
+
+.main {
+  margin-top: 5vw;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 5vw;
+}
+
+.card {
+  text-decoration: none;
+  width: 20vw;
+  background: black;
+  height: 20vh;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.bi {
+  color: #fff;
+  font-size: 2.5rem;
+}
+
+h5 {
+  color: rgba(0, 0, 0, 0.668);
+}
+
+.red {
+  color: red;
+}
+
+h2 {
+  display: none;
+  font-size: 2rem;
+  color: #eaeaea;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+}
+
+.allanime {
+  box-shadow: var(--shadow);
+  transition: var(--transition);
+}
+
+.allanime:hover {
+  box-shadow: var(--anime);
+}
+
+@media (max-width: 700px) {
+  .card {
+    width: 40vw;
+    height: 18vh;
+  }
+  .main {
+    grid-template-columns: auto auto;
+    gap: 15px;
+  }
+  #DSC-SJCET {
+    display: none;
+  }
+  #SMALL-DSC-SJCET, h2 {
+    display: block;
+  }
 }/*# sourceMappingURL=style.css.map */
