--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,6 @@
+
+
+
 :root {
     --shadow : 0 1px 3px rgba(0, 0, 0, 0.12),
         0 1px 2px rgba(0, 0, 0, 0.24);
@@ -50,7 +53,6 @@ background: #fff;
 .card {
     text-decoration: none;
     width: 20vw;
-    background:black;
     height: calc(20vh);
     border-radius: 8px;
     display: flex;
@@ -61,7 +63,59 @@ background: #fff;
 .bi {
     color: #fff;
     font-size: 2.5rem;
+    transition: var(--transition);
 }
+
+.instagram {
+    background: #c13584;
+        background: -moz-linear-gradient(45deg, #c13584 0%, #e1306c 30%, #f56040 67%, #f77737 100%);
+        background: -webkit-linear-gradient(45deg, #c13584 0%, #e1306c 30%, #f56040 67%, #f77737 100%);
+        background: linear-gradient(45deg, #c13584 0%, #e1306c 30%, #f56040 67%, #f77737 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c13584', endColorstr='#f77737', GradientType=1);
+}
+
+.youtube {
+    background: #ff4646;
+        background: -moz-linear-gradient(45deg, #ff4646 0%, #fc5f5f 100%);
+        background: -webkit-linear-gradient(45deg, #ff4646 0%, #fc5f5f 100%);
+        background: linear-gradient(45deg, #ff0000 0%, #ff4949 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0000', endColorstr='#ff4949', GradientType=1);
+}
+
+.twitter {
+    background: #1da1f2;
+        background: -moz-linear-gradient(45deg, #1da1f2 0%, #45b1ef 100%);
+        background: -webkit-linear-gradient(45deg, #1da1f2 0%, #45b1ef 100%);
+        background: linear-gradient(45deg, #1da1f2 0%, #45b1ef 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1da1f2', endColorstr='#45b1ef', GradientType=1);
+}
+
+.github {
+    background: #2b3137;
+        background: -moz-linear-gradient(45deg, #2b3137 0%, #24292e 100%);
+        background: -webkit-linear-gradient(45deg, #2b3137 0%, #24292e 100%);
+        background: linear-gradient(45deg, #2b3137 0%, #24292e 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2b3137', endColorstr='#24292e', GradientType=1);
+}
+
+.browser {
+background: #22b455;
+    background: -moz-linear-gradient(45deg, #22b455 0%, #0ab242 100%);
+    background: -webkit-linear-gradient(45deg, #22b455 0%, #0ab242 100%);
+    background: linear-gradient(45deg, #22b455 0%, #0ab242 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#22b455', endColorstr='#0ab242', GradientType=1);
+}
+
+.discord {
+    background: #7289da;
+        background: -moz-linear-gradient(45deg, #7289da 0%, #5473d8 100%);
+        background: -webkit-linear-gradient(45deg, #7289da 0%, #5473d8 100%);
+        background: linear-gradient(45deg, #7289da 0%, #5473d8 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7289da', endColorstr='#5473d8', GradientType=1);
+}
+
+
+
 h5 {
     color: rgba(0, 0, 0, 0.668);
 }
@@ -83,6 +137,9 @@ h2 {
 
 .allanime:hover {
     box-shadow: var(--anime);
+    .bi{
+        font-size: 3rem;
+    }
 }
 
 @media (max-width:700px){
