--- a/style.scss
+++ b/style.scss
@@ -74,13 +74,13 @@ background: #fff;
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c13584', endColorstr='#f77737', GradientType=1);
 }
 
-.youtube {
-    background: #ff4646;
-        background: -moz-linear-gradient(45deg, #ff4646 0%, #fc5f5f 100%);
-        background: -webkit-linear-gradient(45deg, #ff4646 0%, #fc5f5f 100%);
-        background: linear-gradient(45deg, #ff0000 0%, #ff4949 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0000', endColorstr='#ff4949', GradientType=1);
-}
+.chapter {
+    background: #db4437;
+        background: -moz-linear-gradient(45deg, #db4437 19%, #f4b400 52%, #0f9d58 85%);
+        background: -webkit-linear-gradient(45deg, #db4437 19%, #f4b400 52%, #0f9d58 85%);
+        background: linear-gradient(45deg, #db4437 19%, #f4b400 52%, #0f9d58 85%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#db4437', endColorstr='#0f9d58', GradientType=1);
+    }
 
 .twitter {
     background: #1da1f2;
