Chapter color changed

--- a/style.scss
+++ b/style.scss
@@ -76,9 +76,9 @@ background: #fff;
 
 .chapter {
     background: #db4437;
-        background: -moz-linear-gradient(45deg, #db4437 19%, #f4b400 52%, #0f9d58 85%);
-        background: -webkit-linear-gradient(45deg, #db4437 19%, #f4b400 52%, #0f9d58 85%);
-        background: linear-gradient(45deg, #db4437 19%, #f4b400 52%, #0f9d58 85%);
+        background: -moz-linear-gradient(45deg, #db4437 19%, #f4b400 85%);
+        background: -webkit-linear-gradient(45deg, #db4437 19%, #f4b400 85%);
+        background: linear-gradient(45deg, #db4437 19%, #f4b400 85%);
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#db4437', endColorstr='#0f9d58', GradientType=1);
     }
 
