--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
 
 .chapter {
   background: #db4437;
-  background: linear-gradient(45deg, #db4437 19%, #f4b400 52%, #0f9d58 85%);
+  background: linear-gradient(45deg, #db4437 19%, #f4b400 85%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#db4437", endColorstr="#0f9d58", GradientType=1);
 }
 
