--- a/style.css
+++ b/style.css
@@ -6,66 +6,39 @@
       0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-@font-face {
-  font-family: "Google";
-  src: url(font/ProductSans-Bold.woff);
-}
 body {
-  margin: 0;
-  padding: 0;
-  background: #e2e1e0;
+  background: hwb(0 50% 50%);
   font-family: "Google", "sans-serif";
   text-align: center;
 }
-
-.container {
-  background: #fff;
-  border-radius: 10px;
-  width: calc(100vw - 35px);
-  min-height: calc(100vh - 30px);
-  box-shadow: var(--shadow);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  margin: 15px;
+body div.mybox {
+  box-shadow: var(--anime);
 }
 
 #DSC-SJCET {
-  width: 50vw;
-  height: auto;
+  display: block;
 }
 
 #SMALL-DSC-SJCET {
   display: none;
-  width: 40vw;
-  height: auto;
-}
-
-.main {
-  margin-top: 5vw;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  align-items: center;
-  justify-content: space-evenly;
-  gap: 5vw;
-}
-
-.card {
-  text-decoration: none;
-  width: 20vw;
-  height: 20vh;
-  border-radius: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
 }
 
 .bi {
+  margin: 0 !important;
+  width: 100%;
+  height: 20vh;
   color: #fff;
-  font-size: 2.5rem;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  box-shadow: var(--shadow);
   transition: var(--transition);
+}
+
+a > .bi:active,
+a > .bi:hover {
+  box-shadow: var(--anime);
+  font-size: 5rem;
 }
 
 .instagram {
@@ -104,51 +77,11 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#7289da", endColorstr="#5473d8", GradientType=1);
 }
 
-h6,
-h5 {
-  color: rgba(0, 0, 0, 0.668);
-  margin: 0;
-  padding: 0;
-}
-
-.red {
-  color: red;
-}
-
-h2 {
-  display: none;
-  font-size: 2rem;
-  color: #eaeaea;
-  font-weight: bold;
-  margin: 0;
-  padding: 0;
-}
-
-.allanime {
-  box-shadow: var(--shadow);
-  transition: var(--transition);
-}
-
-.allanime:hover {
-  box-shadow: var(--anime);
-}
-.allanime:hover .bi {
-  font-size: 3rem;
-}
-
 @media (max-width: 700px) {
-  .card {
-    width: 40vw;
-    height: 18vh;
-  }
-  .main {
-    grid-template-columns: auto auto;
-    gap: 15px;
-  }
   #DSC-SJCET {
     display: none;
   }
-  #SMALL-DSC-SJCET, h2 {
+  #SMALL-DSC-SJCET {
     display: block;
   }
 }/*# sourceMappingURL=style.css.map */
