--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,3 @@
-
-
-
 :root {
     --shadow : 0 1px 3px rgba(0, 0, 0, 0.12),
         0 1px 2px rgba(0, 0, 0, 0.24);
@@ -8,64 +5,40 @@
     --anime: 0 14px 28px rgba(0, 0, 0, 0.25),
         0 10px 10px rgba(0, 0, 0, 0.22);
 }
-@font-face {
-    font-family: 'Google';
-    src: url(font/ProductSans-Bold.woff);
-}
+// @font-face {
+//     font-family: 'Google';
+//     src: url(font/ProductSans-Bold.woff);
+// }
 body {
-    margin: 0;
-    padding: 0;
-    background: #e2e1e0;
+    background: hwb(0 50% 50%);
     font-family: 'Google','sans-serif';
     text-align: center;
+    div.mybox {
+            box-shadow: var(--anime);
+    }
 }
-.container {
-background: #fff;
-    border-radius: 10px;
-    width: calc(100vw - 35px);
-    min-height: calc(100vh - 30px);
-    box-shadow: var(--shadow);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    margin: 15px;
-}
-
 #DSC-SJCET {
-    width: 50vw;
-    height: auto;
+    display: block;
 }
 #SMALL-DSC-SJCET {
     display: none;
-    width: 40vw;
-        height: auto;
-}
-.main {
-    margin-top: 5vw;
-    display: grid;
-    grid-template-columns: auto auto auto ;
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 5vw;
-
-}
-.card {
-    text-decoration: none;
-    width: 20vw;
-    height: calc(20vh);
-    border-radius: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
 }
 .bi {
+    margin: 0!important;
+    width: 100%;
+    height: 20vh;
     color: #fff;
-    font-size: 2.5rem;
-    transition: var(--transition);
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    box-shadow: var(--shadow);
+        transition: var(--transition);
 }
-
+a>.bi:active,
+a>.bi:hover {
+            box-shadow: var(--anime);
+            font-size: 5rem;
+}
 .instagram {
     background: #c13584;
         background: -moz-linear-gradient(45deg, #c13584 0%, #e1306c 30%, #f56040 67%, #f77737 100%);
@@ -113,50 +86,11 @@ background: #22b455;
         background: linear-gradient(45deg, #7289da 0%, #5473d8 100%);
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7289da', endColorstr='#5473d8', GradientType=1);
 }
-
-
-h6,
-h5 {
-    color: rgba(0, 0, 0, 0.668);
-    margin: 0;
-    padding: 0;
-}
-.red {
-    color: red;
-}
-h2 {
-    display: none;
-    font-size: 2rem;
-    color: #eaeaea;
-    font-weight: bold;
-    margin: 0;
-    padding: 0;
-}
-.allanime {
-    box-shadow:var(--shadow);
-    transition: var(--transition);
-}
-
-.allanime:hover {
-    box-shadow: var(--anime);
-    .bi{
-        font-size: 3rem;
-    }
-}
-
 @media (max-width:700px){
-    .card {
-        width: 40vw ;
-        height: 18vh ;
-    }
-.main {
-    grid-template-columns: auto auto;
-    gap: 15px;
-}
 #DSC-SJCET {
     display: none;
 }
-#SMALL-DSC-SJCET,h2{
+#SMALL-DSC-SJCET{
     display: block;
 }
 }
