--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
       0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
+@font-face {
+  font-family: "Google";
+  src: url(font/ProductSans-Bold.woff);
+}
 body {
   background: rgb(209, 209, 209) !important;
   font-family: "Google", "sans-serif";
@@ -26,7 +30,7 @@ body div.mybox {
 .bi {
   margin: 0 !important;
   width: 100%;
-  height: 20vh;
+  height: 17vh;
   color: #fff;
   justify-content: center;
   align-items: center;
@@ -65,19 +69,37 @@ a > .bi:hover {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2b3137", endColorstr="#24292e", GradientType=1);
 }
 
-.browser {
+.whatsapp {
   background: #22b455;
-  background: linear-gradient(45deg, #22b455 0%, #0ab242 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#22b455", endColorstr="#0ab242", GradientType=1);
+  background: linear-gradient(45deg, #22b455 30%, #00c040 70%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#22b455", endColorstr="#00c040", GradientType=1);
 }
 
 .discord {
   background: #7289da;
-  background: linear-gradient(45deg, #7289da 0%, #5473d8 100%);
+  background: linear-gradient(45deg, #7289da 0%, #5473d8 70%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#7289da", endColorstr="#5473d8", GradientType=1);
+}
+
+.linkedin {
+  background: #0a66c2;
+  background: linear-gradient(45deg, #0a66c2 0%, #2674c1 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0a66c2", endColorstr="#2674c1", GradientType=1);
+}
+
+.site {
+  background: #6f38c5;
+  background: linear-gradient(45deg, #6f38c5 0%, #8159c1 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#6f38c5", endColorstr="#8159c1", GradientType=1);
 }
 
 .mybox {
   width: 100%;
   height: 100%;
+}
+
+@media (min-width: 768px) {
+  .bi {
+    height: 20vh;
+  }
 }/*# sourceMappingURL=style.css.map */
