--- a/style/style.scss
+++ b/style/style.scss
@@ -5,10 +5,10 @@
     --anime: 0 14px 28px rgba(0, 0, 0, 0.25),
         0 10px 10px rgba(0, 0, 0, 0.22);
 }
-// @font-face {
-//     font-family: 'Google';
-//     src: url(font/ProductSans-Bold.woff);
-// }
+@font-face {
+    font-family: 'Google';
+    src: url(font/ProductSans-Bold.woff);
+}
 body {
     background: rgb(209, 209, 209)!important;
     font-family: 'Google','sans-serif';
@@ -26,14 +26,18 @@ body {
 .bi {
     margin: 0!important;
     width: 100%;
-    height: 20vh;
+    height: 17vh;
     color: #fff;
     justify-content: center;
     align-items: center;
     font-size: 3rem;
     box-shadow: var(--shadow);
-        transition: var(--transition);
+    transition: var(--transition);
 }
+
+// .bi-android {
+//     color: rgb(0, 0, 0);
+// }
 a>.bi:active,
 a>.bi:active:after,
 a>.bi:hover {
@@ -72,30 +76,43 @@ a>.bi:hover {
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2b3137', endColorstr='#24292e', GradientType=1);
 }
 
-.browser {
+.whatsapp {
 background: #22b455;
-    background: -moz-linear-gradient(45deg, #22b455 0%, #0ab242 100%);
-    background: -webkit-linear-gradient(45deg, #22b455 0%, #0ab242 100%);
-    background: linear-gradient(45deg, #22b455 0%, #0ab242 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#22b455', endColorstr='#0ab242', GradientType=1);
+    background: -moz-linear-gradient(45deg, #22b455 30%, #00c040 70%);
+    background: -webkit-linear-gradient(45deg, #22b455 30%, #00c040 70%);
+    background: linear-gradient(45deg, #22b455 30%, #00c040 70%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#22b455', endColorstr='#00c040', GradientType=1);
 }
 
 .discord {
     background: #7289da;
-        background: -moz-linear-gradient(45deg, #7289da 0%, #5473d8 100%);
-        background: -webkit-linear-gradient(45deg, #7289da 0%, #5473d8 100%);
-        background: linear-gradient(45deg, #7289da 0%, #5473d8 100%);
+        background: -moz-linear-gradient(45deg, #7289da 0%, #5473d8 70%);
+        background: -webkit-linear-gradient(45deg, #7289da 0%, #5473d8 70%);
+        background: linear-gradient(45deg, #7289da 0%, #5473d8 70%);
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7289da', endColorstr='#5473d8', GradientType=1);
 }
+
+.linkedin {
+    background: #0a66c2;
+    background: -moz-linear-gradient(45deg, #0a66c2 0%, #2674c1 100%);
+    background: -webkit-linear-gradient(45deg, #0a66c2 0%,#2674c1 100%);
+    background: linear-gradient(45deg, #0a66c2 0%,#2674c1 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0a66c2', endColorstr='#2674c1', GradientType=1);
+}
+.site {
+    background: #6f38c5;
+        background: -moz-linear-gradient(45deg, #6f38c5 0%, #8159c1 100%);
+        background: -webkit-linear-gradient(45deg, #6f38c5 0%, #8159c1 100%);
+        background: linear-gradient(45deg, #6f38c5 0%, #8159c1 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6f38c5', endColorstr='#8159c1', GradientType=1);
+}
+
 .mybox {
     width: calc(100%);
     height: calc(100%);
 }
-// @media (max-width:700px){
-// #DSC-SJCET {
-//     display: none;
-// }
-// #SMALL-DSC-SJCET{
-//     display: block;
-// }
-// }
+@media (min-width:768px){
+.bi {
+height: 20vh;
+}
+}
