--- a/style/style.scss
+++ b/style/style.scss
@@ -116,3 +116,8 @@ background: #22b455;
 height: 20vh;
 }
 }
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
