--- a/style.css
+++ b/style.css
@@ -102,4 +102,10 @@ a > .bi:hover {
   .bi {
     height: 20vh;
   }
+}
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  -moz-user-select: none;
+       user-select: none; /* Standard syntax */
 }/*# sourceMappingURL=style.css.map */
