--- a/style.css
+++ b/style.css
@@ -104,8 +104,8 @@ a > .bi:hover {
   }
 }
 .prevent-select {
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
+  -webkit-user-select: none;
+  -ms-user-select: none;
   -moz-user-select: none;
-       user-select: none; /* Standard syntax */
-}/*# sourceMappingURL=style.css.map */
+       user-select: none; 
+}
